examples/test/testpolicy11978.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11978
  namespace: namespace466
spec:
  podSelector:
    matchLabels:
      key8: value10
      key6: value34
      key10: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value28
          key41: value39
      podSelector:
        matchLabels:
          key3: value24
          key45: value22
